<resources>
    <string name="app_name">MenuMapProject</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello">Hello</string>
    <string name="SignIn">SignIn</string>
    <string name="SignOut">SignUp</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="PhoneNumber_real">12345</string>
    <string name="Password">Password</string>
    <string name="Password_real">1234</string>
    <string name="Nariman">Nariman</string>
    <string name="Name">Name</string>
    <string name="Menu">Menu</string>
    <string name="Signout">SignOut</string>
    <string name="Description">Description:</string>
    <string name="Location">Location:</string>
    <string name="Information1">Information 1:</string>
    <string name="Information2">Information 2:</string>
    <string name="hint">Please give your feedback here</string>
    <string name="ratingdescription">Please Rate This Restaurant and Give Some Feedback</string>
    <string name="ratingtitle">Restaurant Rate</string>
    <string name="ratingpositive">Submit</string>
    <string name="ratingnegative">Cancel</string>
    <string name="ratingdescriptionverybad">Very Bad</string>
    <string name="ratingdescriptionnotgood">Not Good</string>
    <string name="ratingdescriptiongood">Good</string>
    <string name="ratingdescriptionverygood">Very Good</string>
    <string name="ratingdescriptionexcellent">Excellent</string>

</resources>
