<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView

        android:id="@+id/nestedscrollview"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <TextView
                        android:id="@+id/name_restaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="12dp"
                        android:text="Restaurant Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingBar"
                        android:rating="0"
                        android:max="5"
                        android:isIndicator="true"

                        />




                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView

                android:id="@+id/description_restaurant_1"
                android:layout_marginTop="12dp"
                android:lineSpacingMultiplier="1.5"
                android:padding="12dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="14sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView

                    android:id="@+id/description_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="Description content"

                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </android.support.v7.widget.CardView>

            <TextView

                android:id="@+id/location_restaurant_1"
                android:layout_marginTop="12dp"
                android:lineSpacingMultiplier="1.5"
                android:padding="12dp"
                android:text="@string/Location"
                android:textColor="@android:color/black"
                android:textSize="14sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:id="@+id/location_restaurant"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="Location"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </android.support.v7.widget.CardView>

            <TextView

                android:id="@+id/information_1_restaurant_1"
                android:layout_marginTop="12dp"
                android:lineSpacingMultiplier="1.5"
                android:padding="12dp"
                android:text="@string/Information1"
                android:textColor="@android:color/black"
                android:textSize="14sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:id="@+id/information_1_restaurant"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="Information 1"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </android.support.v7.widget.CardView>

            <TextView

                android:id="@+id/information_2_restaurant_2"
                android:layout_marginTop="12dp"
                android:lineSpacingMultiplier="1.5"
                android:padding="12dp"
                android:text="@string/Information2"
                android:textColor="@android:color/black"
                android:textSize="14sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView

                    android:id="@+id/information_2_restaurant"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="Information 2"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/hint"
                android:text="@string/hint"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingtitle"
                android:text="@string/ratingtitle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingdescription"
                android:text="@string/ratingdescription"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingpositive"
                android:text="@string/ratingpositive"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingnegative"
                android:text="@string/ratingnegative"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingdescriptionverybad"
                android:text="@string/ratingdescriptionverybad"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingdescriptionnotgood"
                android:text="@string/ratingdescriptionnotgood"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingdescriptiongood"
                android:text="@string/ratingdescriptiongood"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingdescriptionverygood"
                android:text="@string/ratingdescriptionverygood"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/ratingdescriptionexcellent"
                android:text="@string/ratingdescriptionexcellent"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnrating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:elevation="6dp"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_anchor="@id/information_2_restaurant"
        app:layout_anchorGravity="bottom|center|start"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true" />





</android.support.design.widget.CoordinatorLayout>

